--- a/odonto/templates/records/fp17_dental_care_provider.html
+++ b/odonto/templates/records/fp17_dental_care_provider.html
@@ -3,15 +3,15 @@
     Provider:
   </div>
   <div class="col-md-9">
-    <b>[[ item.provider_name ]]</b>
+    <b>{{ item.provider_name }}</b>
   </div>
 </div>
 <div class="row">
-  <div class="col-md-3">
+  <Div class="col-md-3">
     Location:
   </div>
   <div class="col-md-9">
-    <b>[[ item.provider_location_number ]]</b>
+    <b>{{ item.provider_location_number }}</b>
   </div>
 </div>
 <div class="row">
@@ -19,6 +19,6 @@
     Performer:
   </div>
   <div class="col-md-9">
-    <b>[[ item.performer ]]</b>
+    <b>{{ item.performer }}</b>
   </div>
 </div>
