--- a/odonto/templates/records/fp17_other_dental_services.html
+++ b/odonto/templates/records/fp17_other_dental_services.html
@@ -1,42 +1,47 @@
-<table class="table table-striped">
-  <tr>
-    <td>
-      Treatment on referral
-    </td>
-    <td>
-      <span ng-show="item.treatment_on_referral">X</span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Free repair or replacement
-    </td>
-    <td>
-      <span ng-show="item.free_repair_or_replacement">X</span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Further treatment within 2 months
-    </td>
-    <td>
-      <span ng-show="item.further_treatment_within_2_months">X</span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Domicillary services
-    </td>
-    <td>
-      <span ng-show="item.domicillary_services">X</span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Sedation services
-    </td>
-    <td>
-      <span ng-show="item.sedation_services">X</span>
-    </td>
-  </tr>
-</table>
+<div class="row">
+
+  <div class="col-md-6">
+    <table class="table table-striped">
+      <tr>
+        <td>
+          Treatment on referral
+        </td>
+        <td>
+          {% if item.treatment_on_referral %} X {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Free repair or replacement
+        </td>
+        <td>
+          {% if item.free_repair_or_replacement %} X {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Further treatment within 2 months
+        </td>
+        <td>
+          {% if item.further_treatment_within_2_months %} X {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Domicillary services
+        </td>
+        <td>
+          {% if item.domicillary_services %} X {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Sedation services
+        </td>
+        <td>
+          {% if item.sedation_services %} X {% endif %}
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
