--- a/odonto/templates/records/fp17_recall.html
+++ b/odonto/templates/records/fp17_recall.html
@@ -1,3 +1,1 @@
-<span ng-show="item.number_of_months">
-  Recall in [[ item.number_of_months ]] months
-</span>
+Recall in {{ item.number_of_months }} months
