--- a/odonto/templates/records/fp17_incomplete_treatment.html
+++ b/odonto/templates/records/fp17_incomplete_treatment.html
@@ -1,16 +1,16 @@
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-3">
     Date of acceptance:
   </div>
-  <div class="col-md-4">
-    <b>[[ item.date_of_acceptance | displayDate ]]</b>
+  <div class="col-md-9">
+    <b>{{ item.date_of_acceptance }}</b>
   </div>
 </div>
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-3">
     Date of completion or last visit:
   </div>
-  <div class="col-md-4">
-    <b>[[ item.completion_or_last_visit | displayDate ]]</b>
+  <div class="col-md-9">
+    <b>{{ item.completion_or_last_visit }}</b>
   </div>
 </div>
