--- a/odonto/templates/records/fp17_treatment_category.html
+++ b/odonto/templates/records/fp17_treatment_category.html
@@ -1,66 +1,71 @@
-<table class="table table-striped">
-  <tr>
-    <td>
-      Treatment category
-    </td>
-    <td>
-      [[ item.treatment_category ]]
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Urgent treatment
-    </td>
-    <td>
-      <span ng-show="item.urgent_treatment">X</span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Regulation 11 replacement appliance
-    </td>
-    <td>
-      <span ng-show="item.regulation_11_replacement_appliance">X</span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Prescription only
-    </td>
-    <td>
-      <span ng-show="item.prescription_only">X</span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Denture repairs
-    </td>
-    <td>
-      <span ng-show="item.denture_repairs">X</span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Bridge repairs
-    </td>
-    <td>
-      <span ng-show="item.bridge_repairs">X</span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Arrest of bleeding
-    </td>
-    <td>
-      <span ng-show="item.arrest_of_bleeding">X</span>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Removal of sutures
-    </td>
-    <td>
-      <span ng-show="item.removal_of_sutures">X</span>
-    </td>
-  </tr>
-</table>
+<div class="row">
+
+  <div class="col-md-6">
+    <table class="table table-striped">
+      <tr>
+        <td>
+          Treatment category
+        </td>
+        <td>
+          {{ item.treatment_category }}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Urgent treatment
+        </td>
+        <td>
+          {% if item.urgent_treatment %} X {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Regulation 11 replacement appliance
+        </td>
+        <td>
+          {% if item.regulation_11_replacement_appliance %} X {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Prescription only
+        </td>
+        <td>
+          {% if item.prescription_only %} X {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Denture repairs
+        </td>
+        <td>
+          {% if item.denture_repairs %} X {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Bridge repairs
+        </td>
+        <td>
+          {% if item.bridge_repairs %} X {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Arrest of bleeding
+        </td>
+        <td>
+          {% if item.arrest_of_bleeding %} X {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Removal of sutures
+        </td>
+        <td>
+          {% if item.removal_of_sutures %} X {% endif %}
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
