--- a/odonto/templates/records/orthodontic_data_set.html
+++ b/odonto/templates/records/orthodontic_data_set.html
@@ -1,48 +1,48 @@
-<span ng-show="item.radiograph">
-    [[ item.radiograph ]]
+{% if item.radiograph %}
+    {{ item.radiograph }}
    <br />
-</span>
-<span ng-show="item.removable_upper_appliance">
+{% endif %}
+{% if item.removable_upper_appliance %}
      Removable Upper Appliance
    <br />
-</span>
-<span ng-show="item.removable_lower_appliance">
+{% endif %}
+{% if item.removable_lower_appliance %}
      Removable Lower Appliance
    <br />
-</span>
-<span ng-show="item.fixed_upper_appliance">
+{% endif %}
+{% if item.fixed_upper_appliance %}
      Fixed Upper Appliance
    <br />
-</span>
-<span ng-show="item.fixed_lower_appliance">
+{% endif %}
+{% if item.fixed_lower_appliance %}
      Fixed Lower Appliance
    <br />
-</span>
-<span ng-show="item.function_appliance">
+{% endif %}
+{% if item.function_appliance %}
      Function Appliance
    <br />
-</span>
-<span ng-show="item.retainer_upper">
+{% endif %}
+{% if item.retainer_upper %}
      Retainer Upper
    <br />
-</span>
-<span ng-show="item.retainer_lower">
+{% endif %}
+{% if item.retainer_lower %}
      Retainer Lower
    <br />
-</span>
-<span ng-show="item.extractions_upper_right">
-    [[ item.extractions_upper_right ]]
+{% endif %}
+{% if item.extractions_upper_right %}
+    {{ item.extractions_upper_right }}
    <br />
-</span>
-<span ng-show="item.extractions_upper_left">
-    [[ item.extractions_upper_left ]]
+{% endif %}
+{% if item.extractions_upper_left %}
+    {{ item.extractions_upper_left }}
    <br />
-</span>
-<span ng-show="item.extractions_lower_right">
-    [[ item.extractions_lower_right ]]
+{% endif %}
+{% if item.extractions_lower_right %}
+    {{ item.extractions_lower_right }}
    <br />
-</span>
-<span ng-show="item.extractions_lower_left">
-    [[ item.extractions_lower_left ]]
+{% endif %}
+{% if item.extractions_lower_left %}
+    {{ item.extractions_lower_left }}
    <br />
-</span>
+{% endif %}
