--- a/odonto/templates/records/orthodontic_treatment.html
+++ b/odonto/templates/records/orthodontic_treatment.html
@@ -1,44 +1,44 @@
-<span ng-show="item.patient_failed_to_return">
+{% if item.patient_failed_to_return %}
      Treatment abandoned - patient failed to return
    <br />
-</span>
-<span ng-show="item.patient_requested_stop">
+{% endif %}
+{% if item.patient_requested_stop %}
      Treatment abandoned - patient requested
    <br />
-</span>
-<span ng-show="item.treatment_discontinued">
+{% endif %}
+{% if item.treatment_discontinued %}
      Treatment Discontinued
    <br />
-</span>
-<span ng-show="item.treatment_completed">
+{% endif %}
+{% if item.treatment_completed %}
      Treatment Completed
    <br />
-</span>
-<span ng-show="item.par_scores_calculated">
-     PAR 
+{% endif %}
+{% if item.par_scores_calculated %}
+     PAR
    <br />
-</span>
-<span ng-show="item.iotn">
-    [[ item.iotn ]]
+{% endif %}
+{% if item.iotn %}
+    {{ item.iotn }}
    <br />
-</span>
-<span ng-show="item.aesthetic_component">
-    [[ item.aesthetic_component ]]
+{% endif %}
+{% if item.aesthetic_component %}
+    {{ item.aesthetic_component }}
    <br />
-</span>
-<span ng-show="item.iotn_not_applicable">
+{% endif %}
+{% if item.iotn_not_applicable %}
      IOTN not applicable
    <br />
-</span>
-<span ng-show="item.repair">
+{% endif %}
+{% if item.repair %}
      Repair to appliance fitted by another dentist
    <br />
-</span>
-<span ng-show="item.replacement">
+{% endif %}
+{% if item.replacement %}
      Regulation 11 replacement appliance
    <br />
-</span>
-<span ng-show="item.date_of_completion">
-   [[ item.date_of_completion | displayDate ]]
+{% endif %}
+{% if item.date_of_completion %}
+   {{ item.date_of_completion  }}
    <br />
-</span
+{% endif %}
