--- a/odonto/templates/opal/patient_detail.html
+++ b/odonto/templates/opal/patient_detail.html
@@ -58,6 +58,7 @@
               </td>
               <td>
                 {% if episode.stage != "Submitted" %}
+                {% if roles.is_dentist %}
                   <a
                     {% if episode.category_name == "FP17" %}
                       href="/pathway/#/fp17-edit/{{ object.pk }}/{{ episode.pk }}"
@@ -68,6 +69,7 @@
                    class="btn btn-small btn-primary">
                   Edit &nbsp;
                 </a>
+                  {% endif %}
               {% else %}
                 <a href="{% url 'odonto-view-fp17' episode.pk %}" class="btn btn-small btn-default">
                   View
