add further tests, remove stats

--- a/odontotheme/templates/opal.html
+++ b/odontotheme/templates/opal.html
@@ -23,7 +23,7 @@
             {% if roles.is_dentist %}
               <li>
                 <a href="{% url 'odonto-unsubmitted-fp17s' %}">
-                  Unsubmitted {% comment %}({{ stats.my_unsubmitted_fp17s }}){% endcomment %}
+                  Unsubmitted
                 </a>
               </li>
               <li>
