Changes the FP17 and FP17-o views to allow for a summary prior to review and to check for errors on the front end

--- a/odonto/templates/opal/patient_detail.html
+++ b/odonto/templates/opal/patient_detail.html
@@ -80,10 +80,10 @@
                 {% if episode.stage != "Submitted" %}
                   <a
                     {% if episode.category_name == "FP17" %}
-                      href="{% url 'odonto-submit-fp17' episode.pk %}"
+                      href="/pathway/#/fp17-submit/{{ object.pk }}/{{ episode.pk }}"
                     {% endif %}
                     {% if episode.category_name == "FP17O" %}
-                      href="{% url 'odonto-submit-fp17-o' episode.pk %}"
+                      href="/pathway/#/fp17-o-submit/{{ object.pk }}/{{ episode.pk }}"
                     {% endif %}
                    class="btn btn-small btn-primary">
                   Submit
