--- a/odonto/templates/records/fp17_dental_care_provider.html
+++ b/odonto/templates/records/fp17_dental_care_provider.html
@@ -3,7 +3,7 @@
     Provider:
   </div>
   <div class="col-md-9">
-    <b>{{ item.provider_name }}</b>
+    <b>[[ item.provider_name ]]</b>
   </div>
 </div>
 <div class="row">
@@ -11,7 +11,7 @@
     Location:
   </div>
   <div class="col-md-9">
-    <b>{{ item.provider_location_number }}</b>
+    <b>[[ item.provider_location_number ]]</b>
   </div>
 </div>
 <div class="row">
@@ -19,6 +19,6 @@
     Performer:
   </div>
   <div class="col-md-9">
-    <b>{{ item.performer }}</b>
+    <b>[[ item.performer ]]</b>
   </div>
 </div>
