--- a/odonto/templates/records/fp17_clinical_data_set.html
+++ b/odonto/templates/records/fp17_clinical_data_set.html
@@ -7,7 +7,7 @@
           Scale and polish
         </td>
         <td>
-          {% if item.scale_and_polish %} X {% endif %}
+          <span ng-show="item.scale_and_polish">X</span>
         </td>
       </tr>
       <tr>
@@ -15,7 +15,7 @@
           Fluoride varnish
         </td>
         <td>
-          {% if item.fluoride_varnish %} X {% endif %}
+          <span ng-show="item.fluoride_varnish">X</span>
         </td>
       </tr>
       <tr>
@@ -23,7 +23,7 @@
           Fissure sealants
         </td>
         <td>
-          {{ item.fissure_sealants }}
+          [[ item.fissure_sealants ]]
         </td>
       </tr>
       <tr>
@@ -31,7 +31,7 @@
           Radiographs taken
         </td>
         <td>
-          {{ item.radiographs_taken }}
+          [[ item.radiographs_taken ]]
         </td>
       </tr>
       <tr>
@@ -39,7 +39,7 @@
           Endodontic treatment
         </td>
         <td>
-          {{ item.endodontic_treatment }}
+          [[ item.endodontic_treatment ]]
         </td>
       </tr>
       <tr>
@@ -47,7 +47,7 @@
           Permanent fillings and sealant restorations
         </td>
         <td>
-          {{ item.permanent_fillings_and_sealant_restorations }}
+          [[ item.permanent_fillings_and_sealant_restorations ]]
         </td>
       </tr>
       <tr>
@@ -55,7 +55,7 @@
           Extractions
         </td>
         <td>
-          {{ item.extractions }}
+          [[ item.extractions ]]
         </td>
       </tr>
       <tr>
@@ -63,7 +63,7 @@
           Crowns provided
         </td>
         <td>
-          {{ item.crowns_provided }}
+          [[ item.crowns_provided ]]
         </td>
       </tr>
       <tr>
@@ -71,7 +71,7 @@
           Upper denture acrylic
         </td>
         <td>
-          {{ item.upper_denture_acrylic }}
+          [[ item.upper_denture_acrylic ]]
         </td>
       </tr>
       <tr>
@@ -79,7 +79,7 @@
           Lower denture acrylic
         </td>
         <td>
-          {{ item.lower_denture_acrylic }}
+          [[ item.lower_denture_acrylic ]]
         </td>
       </tr>
       <tr>
@@ -87,7 +87,7 @@
           Upper denture metal
         </td>
         <td>
-          {{ item.upper_denture_metal }}
+          [[ item.upper_denture_metal ]]
         </td>
       </tr>
       <tr>
@@ -95,7 +95,7 @@
           Lower denture metal
         </td>
         <td>
-          {{ item.lower_denture_metal }}
+          [[ item.lower_denture_metal ]]
         </td>
       </tr>
       <tr>
@@ -103,7 +103,7 @@
           Veneers applied
         </td>
         <td>
-          {{ item.veneers_applied }}
+          [[ item.veneers_applied ]]
         </td>
       </tr>
       <tr>
@@ -111,7 +111,7 @@
           Inlays
         </td>
         <td>
-          {{ item.inlays }}
+          [[ item.inlays ]]
         </td>
       </tr>
       <tr>
@@ -119,7 +119,7 @@
           Bridges fitted
         </td>
         <td>
-          {{ item.bridges_fitted }}
+          [[ item.bridges_fitted ]]
         </td>
       </tr>
       <tr>
@@ -127,7 +127,7 @@
           Referral for advanced mandatory services band
         </td>
         <td>
-          {{ item.referral_for_advanced_mandatory_services_band }}
+          [[ item.referral_for_advanced_mandatory_services_band ]]
         </td>
       </tr>
       <tr>
@@ -135,7 +135,7 @@
           Examination
         </td>
         <td>
-          {% if item.examination %} X {% endif %}
+          <span ng-show="item.examination">X</span>
         </td>
       </tr>
       <tr>
@@ -143,7 +143,7 @@
           Antibiotic items prescribed
         </td>
         <td>
-          {{ item.antibiotic_items_prescribed }}
+          [[ item.antibiotic_items_prescribed ]]
         </td>
       </tr>
       <tr>
@@ -151,7 +151,7 @@
           Other treatment
         </td>
         <td>
-          {% if item.other_treatment %} X {% endif %}
+          <span ng-show="item.other_treatment">X</span>
         </td>
       </tr>
       <tr>
@@ -159,7 +159,7 @@
           Best practice prevention according to Delivering Better Oral Health offered
         </td>
         <td>
-          {% if item.best_practice_prevention %} X {% endif %}
+          <span ng-show="item.best_practice_prevention">X</span>
         </td>
       </tr>
       <tr>
@@ -167,7 +167,7 @@
           Decayed teeth permanent
         </td>
         <td>
-          {{ item.decayed_teeth_permanent }}
+          [[ item.decayed_teeth_permanent ]]
         </td>
       </tr>
       <tr>
@@ -175,7 +175,7 @@
           Decayed teeth deciduous
         </td>
         <td>
-          {{ item.decayed_teeth_deciduous }}
+          [[ item.decayed_teeth_deciduous ]]
         </td>
       </tr>
       <tr>
@@ -183,7 +183,7 @@
           Missing teeth permanent
         </td>
         <td>
-          {{ item.missing_teeth_permanent }}
+          [[ item.missing_teeth_permanent ]]
         </td>
       </tr>
       <tr>
@@ -191,7 +191,7 @@
           Missing teeth deciduous
         </td>
         <td>
-          {{ item.missing_teeth_deciduous }}
+          [[ item.missing_teeth_deciduous ]]
         </td>
       </tr>
       <tr>
@@ -199,7 +199,7 @@
           Filled teeth permanent
         </td>
         <td>
-          {{ item.filled_teeth_permanent }}
+          [[ item.filled_teeth_permanent ]]
         </td>
       </tr>
       <tr>
@@ -207,7 +207,7 @@
           Filled teeth deciduous
         </td>
         <td>
-          {{ item.filled_teeth_deciduous }}
+          [[ item.filled_teeth_deciduous ]]
         </td>
       </tr>
     </table>
