--- a/odonto/templates/templatetags/subrecord.html
+++ b/odonto/templates/templatetags/subrecord.html
@@ -1,3 +1,3 @@
-{% for item in object_list %}
+<span ng-repeat="item in [{{ object_list }}]">
   {% include display_template_name %}
-{% endfor %}
+</span>
